# forgepass-contracts

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  cost-model.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  good-first-issue.yml
.github/workflows/: ci.yml
contracts/: ARCHITECTURE.md  DEPLOYMENT.md  INTERFACES.md
contracts/badges/: MILESTONE-REGISTRY.md  milestone-registry.json
contracts/credential-store/: Cargo.toml
contracts/credential-store/src/: lib.rs
contracts/deployments/: mainnet.json  testnet.json
contracts/passport/: Cargo.toml
contracts/passport/src/: lib.rs
contracts/passport/test_snapshots/tests/: test_sybil_flag_idempotent.1.json  (+7 more)
contracts/scripts/: deploy.sh  smoke-test.sh
contracts/shared/: Cargo.toml
contracts/shared/src/: lib.rs
contracts/soulbound-nft/: Cargo.toml
contracts/soulbound-nft/src/: lib.rs  test.rs  types.rs
contracts/soulbound-nft/tests/: contract_spec_exhaustiveness.rs
contracts/tests/integration/: Cargo.toml  RESULTS.md  SCENARIO-SPEC.md
contracts/tests/integration/src/: lib.rs
contracts/tests/integration/test_snapshots/: scenario_1_full_passport_to_badge_flow.1.json  scenario_2_sybil_flagged_passport.1.json  scenario_3_credential_deduplication.1.json  scenario_4_score_history_accumulation.1.json  scenario_5_badge_duplicate_prevention.1.json  scenario_6_partial_failure_on_chain_rejection.1.json  smoke_all_four_contracts_are_live.1.json
contracts/tests/integration/tests/: scenarios.rs
contracts/trust-score/: Cargo.toml
contracts/trust-score/src/: lib.rs
