[package]
name = "soulbound-nft"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "22.0.11", features = ["alloc"] }
forgepass-shared = { path = "../shared" }

[dev-dependencies]
soroban-sdk = { version = "22.0.11", features = ["alloc", "testutils"] }
soroban-spec = "22.0.11"
stellar-xdr = { version = "=22.1.0", features = ["curr", "std"] }