[package]
name = "integration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
doctest = false

[dev-dependencies]
soroban-sdk = { version = "22.0.11", features = ["testutils"] }
passport = { path = "../../passport" }
trust-score = { path = "../../trust-score" }
soulbound-nft = { path = "../../soulbound-nft" }
credential-store = { path = "../../credential-store" }
forgepass-shared = { path = "../../shared" }
